# Waterino

./: .gitignore  .gitmodules  Makefile  README.md  bootstrap.sh  compile_commands.json  symbolsizes.sh
doc/: controller_simulation.m  data.txt  experiment_data.txt  experimental data  process.sh  processed_data.txt  raw_data.txt
doc/analysis/: controller_simulation.m  water_dep.wxmx
doc/art/: Waterino System Design.drawio
firmware/: CMakeLists.txt  Makefile  compile_commands.json  native_tests  show_test_cov.sh  update_compile_db.sh
firmware/experiment/: CMakeLists.txt  main.cpp
firmware/include/xtd/: adc.hpp  chrono.hpp  common_type.hpp  limits.hpp  math.hpp  ostream.hpp  utility.hpp  wdt.hpp
firmware/selftest/: main.cpp
firmware/src/: CMakeLists.txt  application.cpp  application.hpp  chrono.cpp  cmdinterpreter.cpp  cmdinterpreter.hpp  compute.cpp  compute.hpp  config.hpp  controller.cpp  controller.hpp  delay.cpp  eeprom.hpp  eeprom_layout.hpp  hardware.cpp  hardware.hpp  icmdinterface.hpp  ierrorreporter.hpp  iprobe.hpp  logging.cpp  logging.hpp  main.cpp  pinmap.hpp  probe.hpp  probe_application.hpp  pump.cpp  pump.hpp  sleep.cpp  uart.cpp  waterino.hpp
firmware/src_new/: config.hpp  hardware.cpp  hardware.hpp
firmware/src_old/: cmdinterpreter.hpp  icontroller.hpp  ierrorreporter.hpp  ipump.hpp  main.cpp  pinmap.hpp  probe.hpp  test_waterino.cpp
firmware/src_probe/: eeprom.hpp  main.cpp  probe.cpp  probe.hpp  probe_defs.cpp  probe_defs.hpp  proto_fsm.cpp  proto_fsm.hpp  sensor.cpp
firmware/test/: CMakeLists.txt  CTestTestfile.cmake  cov.sh  mock_chrono.cpp  mock_hardware.cpp  mock_hardware.hpp  mocks.hpp  test_application.cpp  test_compute.cpp  test_controller.cpp  test_pump.cpp  unit-tests  util.hpp
hardware/: waterino.sch
hardware/core_unit/: core_unit-cache.lib  core_unit-rescue.lib  core_unit.kicad_pcb
hardware/node/: node-cache.lib  node.kicad_pcb  node.pro  node.sch
hardware/probe/: irc.wxmx  ntc_calc.wxmx  probe-cache.lib  probe.pro  probe.sch  rtd_calc.wxmx
hardware/probe_a/: Capacitance.wxmx  ntc_calc.wxmx  probe.kicad_pcb  probe_rev2-cache.lib  probe_rev2.sch  rp.wxmx
hardware/probe_b/: probe_b-cache.lib  probe_b-rescue.lib  probe_b.kicad_pcb  probe_b.pro  probe_b.sch  probe_b.xml  sym-lib-table
hardware/probe_b/rescue-backup/: probe_b-2018-09-13-19-54-52.pro  probe_b-2018-09-13-19-54-52.sch  probe_b-cache-2018-09-13-19-54-52.lib
hardware/root_node/: root_node-cache.lib  root_node.pro  root_node.sch
include/xtd/: adc.hpp  algorithm.hpp  arduino.hpp  blink.hpp  bootstrap.hpp  chrono.hpp  chrono_noclock.hpp  delay.hpp  dio.hpp  edf_sched.hpp  eeprom.hpp  gpio.hpp  istream.hpp  limits.hpp  math.hpp  numeric.hpp  ostream.hpp  queue.hpp  ratio.hpp  serial.hpp  sfr.hpp  sleep.hpp  type_traits.hpp  uart.hpp  util.hpp  utility.hpp  wdt.hpp
pcb/: _autosave-waterino.kicad_pcb  backup.kicad_pcb  backup.pro  board.gschem  bom  bom.txt  component sources.txt  waterino-cache.lib  waterino.kicad_pcb  waterino.pro  waterino.sch
pcb/Hearts.pretty/: HEARTS.kicad_mod
pcb/Logos.pretty/: Unicorn HW.kicad_mod
pcb/libraries/: max6817.lib  mic94090.lib
selftest/: main.cpp
src/: .#time.hpp  adc.cpp  arduino.cpp  blink.cpp  bootstrap.cpp  chrono.cpp  cmdinterpreter.cpp  cmdinterpreter.hpp  controller.hpp  delay.cpp  dio.cpp  gpio.cpp  main.cpp  pinmap.hpp  probe.hpp  pump.cpp  pump.hpp  pumpcontroller.cpp  pumpcontroller.hpp  sleep.cpp  test.cc  tt.cc  uart.cpp  util.cpp  wdt.cpp
